Bug Fix (Editor): word wrap
Fixed an issue with the word wrap on the editor preview. It would grow
in width and create a horizontal scroll. The word-wrap css property has
been added to fix this problem.

--- a/app/scss/epochtalk/editor.scss
+++ b/app/scss/epochtalk/editor.scss
@@ -48,7 +48,8 @@
 .editor-preview { 
   white-space: pre;
   overflow: auto;
-  height: 100%; }
+  height: 100%;
+  word-wrap: break-word; }
 .editor-preview p { margin: 0; }
 
 .editor-footer {
